<resources>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>

    <string name="geoQuiz">Geo Quiz App</string>
    <string name="app_name">Puskal</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorect</string>

    <string name="question_australia">Canberra is the capital of Australia ?</string>

    <string name="question_ocean">The pasific ocean is largest than Atlantic ocean ?</string>
    <string name="question_mideast">The Suez Canal connects the red sea and the Indian Ocean ?</string>
    <string name="question_africa">The source of nile river is in Egypt ?</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas ? </string>
    <string name="question_asia">The Baikal is the world\'s oldest and deepest freshwater lake ?</string>

    <string name="warning_text">Are you sure you want to do this ?</string>
    <string name="show_answer_button">Show Answer.</string>
    <string name="cheat_button">Cheat !</string>
    <string name="judgement_toast">Cheating is wrong</string>

</resources>