<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/linear_layout"
    android:padding="20dp"
    android:layout_marginTop="60dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/border"
        android:text="@string/geoQuiz" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        tools:text="question_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/false_button" />
    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/right_arrow"
        android:text="@string/cheat_button" />
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/right_arrow"
        android:text="@string/next_button" />

</LinearLayout>